--- a/sprint_1_Adrian/css/style.css
+++ b/sprint_1_Adrian/css/style.css
@@ -9,16 +9,17 @@
 }
 
 .header{
-
-    background-image: url(/sprint_1_Adrian/images/header.jpg);
-    background-size: contain;
+    padding-top: 2rem;
+    background-image: url("/angular_Adrian_IT/sprint_1_Adrian/images/header.jpg");
+    background-size: 100% auto;
     background-repeat: no-repeat;
+    background-position: 0 -13rem ;
     /* conseguir que se ponga la imagen de fondo, ya que ahora no cubre todo el header  */
 }
 
 /* --- nav bar ------ */
 .nav-bar{
-
+    
     display: flex;
     justify-content: space-between;
     font-size: 1.5rem;
@@ -27,24 +28,48 @@
 
 .logo{
     width: 5rem;
+    margin-left: 1rem;
 }
 
 .nav-menu{
     
     margin-top: 1rem;
-
+    
 }
 
-.nav-menu > a{
-
+.nav-item{
+    
+    padding: 1rem;
     text-decoration: none;
     color: grey;
-
+    
+    
+}
+.nav-item:hover{
+    
+    text-decoration: underline;
+    transition-property: all;
+    transition-duration: 5s;
 }
 
-.nav-social{
 
-    margin-top: 1rem;
+.nav-social{
+    
+    margin: 1rem 1rem 0 0;
     color: grey;
+    
+}
+
+
+/* ------ aqui empieza box2 ------------ */
+
+
+.box-2{
+    
+    
+    margin: 8rem 0 5.5rem 0;
+    text-align: center;
+    font-size: 2.5rem;
+    color: rgb(255, 140, 0, 0.5);
 
 }
