--- a/sprint_1_Adrian/css/style.css
+++ b/sprint_1_Adrian/css/style.css
@@ -5,16 +5,19 @@
     
     max-width: 1200px;
     display: grid;
+    grid-template-columns: 2fr 1fr;
     margin: 0 auto;
 }
 
 .header{
+    grid-column-start: 1;
+    grid-column-end: 3;
     padding-top: 2rem;
-    background-image: url("/angular_Adrian_IT/sprint_1_Adrian/images/header.jpg");
+    background-image: url("/sprint_1_Adrian/images/header.jpg");
     background-size: 100% auto;
     background-repeat: no-repeat;
     background-position: 0 -13rem ;
-    /* conseguir que se ponga la imagen de fondo, ya que ahora no cubre todo el header  */
+    margin-bottom: 0.5rem;
 }
 
 /* --- nav bar ------ */
@@ -29,6 +32,7 @@
 .logo{
     width: 5rem;
     margin-left: 1rem;
+    pointer-events: none;
 }
 
 .nav-menu{
@@ -66,10 +70,129 @@
 
 .box-2{
     
-    
     margin: 8rem 0 5.5rem 0;
     text-align: center;
     font-size: 2.5rem;
     color: rgb(255, 140, 0, 0.5);
+
+}
+
+/* ---- layout articulos --------------*/
+
+.article-layout{
+
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 0.5rem;
+    background-color: rgb(209, 205, 205);
+    padding: 0.5rem 0.5rem 0 0.5rem;
+    justify-items: center;
+}
+
+article{
+
+    width: 23rem;
+    padding: 0.5rem;
+    background-color:whitesmoke;
+    color: rgb(97, 97, 97);
+
+}
+
+.article-img{
+    width: 23rem;
+    height: 15rem;
+}
+
+article > h2 {
+    font-family: 'Courier New', Courier, monospace;
+    padding-left: 0.5rem;
+    background-color: rgb(242, 99, 99);
+    color: rgb(233, 230, 230);
+}
+
+.article-text{
+    display: flex ;
+    column-gap: 0.3rem;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+
+
+.leer-mas{
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    text-decoration: none;
+    color: grey;
+
+}
+.leer-mas:hover{
+
+    text-decoration: underline;
+
+}
+
+.texto-secundario{
+    grid-column-start: 1;
+    grid-column-end: 3;
+    text-align: center;
+}
+
+/* -----layout aside------- */
+
+aside{
+
+    padding:1rem;
+    background-color: rgb(209, 205, 205);
+    margin-left: 0.5rem;
+    text-align: center;
+
+}
+
+/* ---------footer--------------- */
+
+footer{
+
+    background-color:rgb(209, 205, 205);
+    color: grey;
+    margin-top: 0.5rem;
+    text-align: center;
+    padding: 0 0.5rem 0 0.5rem;
+    grid-column-start: 1;
+    grid-column-end: 3;
+
+}
+footer > div{
+    padding: 0.5rem 0 0.5rem 0;
+    background-color:whitesmoke ;
+}
+
+
+/* ---------keyframes ----------- */
+
+@keyframes moverIzquierda{
+
+
+
+}
+
+@keyframes mostrarTitulo{
+
+
+
+}
+
+
+/* -------Tablet-------------- */
+/* arreglar media querys. No funcina el grid  */
+@media (max-width: 768px) {
+
+    .article-layout{
+        
+        grid-template-columns: 1fr;
+        
+    }
+    .nav-item{
+
+        color: red;
+
+    }
 
 }
