--- a/sprint_1_Adrian/css/style.css
+++ b/sprint_1_Adrian/css/style.css
@@ -13,7 +13,7 @@
     grid-column-start: 1;
     grid-column-end: 3;
     padding-top: 2rem;
-    background-image: url("/sprint_1_Adrian/images/header.jpg");
+    background-image: url("/angular_Adrian_IT/sprint_1_Adrian/images/header.jpg");
     background-size: 100% auto;
     background-repeat: no-repeat;
     background-position: 0 -13rem ;
@@ -32,7 +32,7 @@
 .logo{
     width: 5rem;
     margin-left: 1rem;
-    pointer-events: none;
+    pointer-events: inherit;
 }
 
 .nav-menu{
@@ -46,22 +46,38 @@
     padding: 1rem;
     text-decoration: none;
     color: grey;
-    
+    transition: 0.5s;
     
 }
+
+.nav-item > i {
+
+    margin-right: 0.3rem;
+
+}
+
 .nav-item:hover{
-    
-    text-decoration: underline;
-    transition-property: all;
-    transition-duration: 5s;
+    transition: 0.5s;
+    font-size: 2rem;
 }
+
 
 
 .nav-social{
-    
     margin: 1rem 1rem 0 0;
-    color: grey;
+}
+.nav-social > a {
     
+    color: grey;
+    text-decoration: none;
+    transition: 0.5s;
+
+}
+.nav-social >a:hover{
+
+    transition: 0.5s;
+    font-size: 2rem;
+
 }
 
 
@@ -98,9 +114,21 @@ article{
 
 }
 
+.img-text{
+
+    
+
+}
+
 .article-img{
     width: 23rem;
     height: 15rem;
+    position: relative;
+}
+.date{
+
+    
+
 }
 
 article > h2 {
